--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ style="margin:1ex">x<sup>2</sup>+y<sup>2</sup>=z<sup>2</sup>
 <a href="a.html" target="abc">abcという名前のフレームにリンクします</a><br>
 
 <h1>練習問題3.3</h1>
-<p></p>ファイルの途中にidでabcという名前を付けます。</p>
+<p>ファイルの途中にidでabcという名前を付けます。</p>
 <a href="#abc">abcと名前を付けた場所へリンクします</a><br>
 <a href="a.html#def">別ファイルの名前を付けた場所へリンクします</a>
 
