--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <h1>練習問題2.2</h1>
 <h1>Hello World</h1>
 <h2>Hello World</h2>
-<h3>Hello world</h3>
+<h3>Hello World</h3>
 <ol>
 <li>ほげほげ</li>
 <li>ほにゃらら</li>
@@ -95,7 +95,7 @@
 <h1>練習問題2.5</h1>
 <ul>
 <li>参考資料を調べ、次のように表示されるHTMLを書きなさい。
-<p
+<p>
 style="margin:1ex">x<sup>2</sup>+y<sup>2</sup>=z<sup>2</sup>
 <br>
 この授業は<b>情報特講1</b>で、<S>眠くなる</S>大変興味深い内容です。<br>
