--- a/index.html
+++ b/index.html
@@ -2,13 +2,9 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-
 <title>Web開発の練習１</title>
-
 <link rel="stylesheet" href="mystyle.css">
-
 <script src="myjs.js"></script>
- 
 </head>
  
 <body>
@@ -160,7 +156,7 @@ style="margin:1ex">x<sup>2</sup>+y<sup>2</sup>=z<sup>2</sup>
 
 <h1>練習問題3.1</h1>
 <a href="a.html">相対パスでリンクします</a><br>
-<a href=https://www.josai.ac.jp/management/>絶対パスで城西大学経営学部へリンクします。</a><br>
+<a href=https://www.josai.ac.jp/management/>絶対パスで城西大学経営学部へリンクします。</a><br>↩
 <a href="mailto:zm23049@josai.ac.jp">自分宛メール(自分のメールアドレスを入力)</a><br>
 <a href="https://www.josai.ac.jp/management/">
 <img src="./keieismall.jpg" alt="城西大学経営学部"></a>
@@ -190,8 +186,8 @@ style="margin:1ex">x<sup>2</sup>+y<sup>2</sup>=z<sup>2</sup>
 <section>
 <h1>城西大学　JOSAI SPORTS FEILD</h1>
 <p> JOSAI SPORTS FIELD [城西大学　坂戸キャンパス]</p>
-<p>2020年9月に完成した、城西大学の新しいスポーツ施設です。サッカー場2面、ソフトボール場1面、人口芝を敷き詰めた約1㎞の周回ランニング走路を整備しました。
- サッカー場の人口芝、ソフトボール場の舗装は水はけにも配慮、緩いアップダウンを付けたランニング走路にも足に優しい人工芝を特に選んでいます。</p>
+<p>2020年9月に完成した、城西大学の新しいスポーツ施設です。サッカー場2面、ソフトボール場1面、人工芝を敷き詰めた約1㎞の周回ランニング走路を整備しました。
+ サッカー場の人工芝、ソフトボール場の舗装は水はけにも配慮、緩いアップダウンを付けたランニング走路にも足に優しい人工芝を特に選んでいます。</p>
 </section></a>
 </aside>
 
